Block navigations to hosted apps non-icon resources with PlzNavigate.

BUG=717626

Review-Url: https://codereview.chromium.org/2875493002
Cr-Commit-Position: refs/heads/master@{#474469}